# stock-chat-repo

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 4039c0d363ce_create_screeners_and_candidates_tables.py  40eb797bc4b8_create_corp_codes_and_disclosures_tables.py  4248cfa08dd2_create_fundamentals_snapshot_table.py  433bc73a2b38_create_market_investor_flows_table.py  5b238138ed0d_create_investor_flows_table.py  856b7b973cc9_create_news_items_table.py  929ce5dee83e_create_alert_rules_and_alert_events_.py  999b3b80b945_create_users_chat_sessions_chat_.py  a19561321a31_create_watchlist_table.py  befb8038f175_add_venue_column_to_prices.py  cc53dfe03fb8_add_market_column_to_instruments.py  d26e4be4b983_create_instruments_table.py  dbe6c941c4e7_create_prices_hypertable.py
backend/app/: main.py
backend/app/api/: alerts.py  candidates.py  chat.py  chat_sessions.py  disclosures.py  discovery_llm.py  instruments.py  investor_flows.py  llm.py  market_investor_flows.py  news.py  prices.py  screeners.py  watchlist.py  ws_prices.py
backend/app/core/: auth.py  config.py  db.py  logging.py  redis_client.py
backend/app/llm/: anthropic.py  base.py  budget.py  catalog.py  discovery_tools.py  gemini.py  registry.py  tools.py
backend/app/models/: __init__.py  alert.py  base.py  chat.py  disclosure.py  discovery.py  fundamentals.py  instrument.py  investor_flow.py  market_investor_flow.py  news.py  price.py  user.py  watchlist.py
(+74 files in other folders)
