[project]
name = "stock-advisor-backend"
version = "0.1.0"
description = "Stock Monitor + LLM Advisor backend (FastAPI)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "structlog>=24.4",
    "pydantic-settings>=2.14.1",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.31.0",
    "redis>=5.0",
    "alembic>=1.18.4",
    "pykrx>=1.2.8",
    "finance-datareader>=0.9.202",
    "apscheduler>=3.11.2",
    "httpx>=0.28.1",
    "anthropic>=0.104.1",
    "google-genai>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.7",
    "mypy>=1.13",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
